--- a/index.html
+++ b/index.html
@@ -85,6 +85,45 @@
                 <a href="#">Learn More<i class="fas fa-angle-double-right"></i></a>
             </div>
         </div>
+
+        <!--Banner 1-->
+        <section class="cards-banner-one">
+            <div class="content">
+                <h2>Lorem, ipsum dolor.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis reiciendis id voluptates incidunt, nesciunt perferendis veniam quos illum, accusantium impedit, doloribus rerum delectus at quidem in quam laboriosam dolorem blanditiis.</p>
+                <a href="#" class="btn">Learn More<i class="fas fa-angle-double-right"></i></a>
+            </div>
+        </section>
+
+        <!--Cards 2-->
+        <div class="cards">
+            <div>
+                <img src="./img/news1.jpg" alt="News 1">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores adipisci atque sit doloremque laudantium illum ducimus eaque maiores nobis vitae dicta ab, libero reprehenderit</p>
+                <a href="#">Learn More<i class="fas fa-angle-double-right"></i></a>
+            </div>
+            <div>
+                <img src="./img/news2.jpg" alt="News 2">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores adipisci atque sit doloremque laudantium illum ducimus eaque maiores nobis vitae dicta ab, libero reprehenderit </p>
+                <a href="#">Learn More<i class="fas fa-angle-double-right"></i></a>
+            </div>
+            <div>
+                <img src="./img/news3.jpg" alt="News 3">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores adipisci atque sit doloremque laudantium illum ducimus eaque maiores nobis vitae dicta ab, libero reprehenderit quia nesciunt quidem odit consequatur perspiciatis?</p>
+                <a href="#">Learn More<i class="fas fa-angle-double-right"></i></a>
+            </div>
+            <div>
+                <img src="./img/news4.jpg" alt="News 4">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores adipisci atque sit doloremque laudantium illum ducimus eaque maiores nobis vitae dicta ab, libero reprehenderit quia nesciunt quidem odit consequatur perspiciatis?</p>
+                <a href="#">Learn More<i class="fas fa-angle-double-right"></i></a>
+            </div>
+        </div>
+
+        
     </div>
 </body>
 </html>
