--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
             <div>
                 <img src="./img/news1.jpg" alt="News 1">
                 <h3>Lorem, ipsum dolor.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores adipisci atque sit doloremque laudantium illum ducimus eaque maiores nobis vitae dicta ab, libero reprehenderit</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores adipisci atque sit doloremque laudantium illum ducimus eaque maiores nobis vitae dicta ab, libero reprehenderit quia nesciunt quidem odit consequatur perspiciatis?</p>
                 <a href="#">Learn More<i class="fas fa-angle-double-right"></i></a>
             </div>
             <div>
                 <img src="./img/news2.jpg" alt="News 2">
                 <h3>Lorem, ipsum dolor.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores adipisci atque sit doloremque laudantium illum ducimus eaque maiores nobis vitae dicta ab, libero reprehenderit </p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores adipisci atque sit doloremque laudantium illum ducimus eaque maiores nobis vitae dicta ab, libero reprehenderit quia nesciunt quidem odit consequatur perspiciatis?</p>
                 <a href="#">Learn More<i class="fas fa-angle-double-right"></i></a>
             </div>
             <div>
@@ -123,7 +123,14 @@
             </div>
         </div>
 
-        
+        <!--Banner 2-->
+        <section class="cards-banner-two">
+            <div class="content">
+                <h2>Lorem, ipsum dolor.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae cumque accusantium eum, odit ea quia velit modi accusamus est sed debitis adipisci, perferendis deleniti nesciunt autem labore excepturi tempora at!</p>
+                <a href="#" class="btn">Learn More <i class="fas fa-angle-double-right"></i></a>
+            </div>
+        </section>
     </div>
 </body>
 </html>
